--- a/src/main/webapp/reportInstitution/report_own.xhtml
+++ b/src/main/webapp/reportInstitution/report_own.xhtml
@@ -93,6 +93,11 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Summary By Investigation Category" action="report_opd_investigation_summery_by_category" /> 
                                     </h:panelGrid>
                                 </p:panel>
+                                <p:panel header="10) Online Payment" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"   >
+                                    <h:panelGrid >                               
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Online Paymnt Detail Report" action="report_online_payments" /> 
+                                    </h:panelGrid>
+                                </p:panel>
                             </h:panelGrid>
                         </h:panelGrid>
                     </p:panel>
