--- a/src/main/webapp/resources/pharmacy/inward/issueBill.xhtml
+++ b/src/main/webapp/resources/pharmacy/inward/issueBill.xhtml
@@ -104,8 +104,7 @@
                             <h:outputLabel value="Req No" ></h:outputLabel>
                         </td>
                         <td>:</td>
-                        <td style="width: 30%;" >
-                            <!--<h:outputLabel value=": &npsp;" ></h:outputLabel>-->
+                        <td style="width: 30%;text-align: left;" >
                             <h:outputLabel value="#{cc.attrs.bill.referenceBill.deptId}"  >
                             </h:outputLabel>
                         </td>
