--- a/src/main/webapp/store/store_report_grn_detail_expencess.xhtml
+++ b/src/main/webapp/store/store_report_grn_detail_expencess.xhtml
@@ -155,11 +155,11 @@
                             <h:outputLabel  value="#{bi.expenseBill.grnNetTotal}" >
                                 <f:convertNumber pattern="#,##0.00"/>
                             </h:outputLabel>
-                            <f:facet name="footer">
+<!--                            <f:facet name="footer">
                                 <h:outputLabel value="#{commonReport.grnBilled.cash}">
                                     <f:convertNumber pattern="#,##0.00"/>
                                 </h:outputLabel>
-                            </f:facet>
+                            </f:facet>-->
                         </p:column>
 
                         <p:column headerText="Expenses" style=" text-align: right" >
@@ -183,11 +183,11 @@
                             <h:outputLabel value="#{bi.expenseBill.netTotal}"  >
                                 <f:convertNumber pattern="#,##0.00"/>
                             </h:outputLabel>   
-                            <f:facet name="footer">
+<!--                            <f:facet name="footer">
                                 <h:outputLabel value="#{commonReport.grnBilled.grnNetTotalWithExpenses}">
                                     <f:convertNumber pattern="#,##0.00"/>
                                 </h:outputLabel>
-                            </f:facet>
+                            </f:facet>-->
                         </p:column>
                         <p:column headerText="Disallowed VAT Amount" style=" text-align: right" >
                             <f:facet name="header">  
@@ -239,11 +239,11 @@
                             <h:outputLabel  value="#{bi.expenseBill.grnNetTotal}" >
                                 <f:convertNumber pattern="#,##0.00"/>
                             </h:outputLabel>
-                            <f:facet name="footer">
+<!--                            <f:facet name="footer">
                                 <h:outputLabel value="#{commonReport.grnCancelled.cash}">
                                     <f:convertNumber pattern="#,##0.00"/>
                                 </h:outputLabel>
-                            </f:facet>
+                            </f:facet>-->
                         </p:column>
 
                         <p:column headerText="Expenses" style=" text-align: right" >
@@ -276,11 +276,11 @@
                             <h:outputLabel value="#{bi.expenseBill.netTotal}"  >
                                 <f:convertNumber pattern="#,##0.00"/>
                             </h:outputLabel>   
-                            <f:facet name="footer">
+<!--                            <f:facet name="footer">
                                 <h:outputLabel value="#{commonReport.grnCancelled.grnNetTotalWithExpenses}">
                                     <f:convertNumber pattern="#,##0.00"/>
                                 </h:outputLabel>
-                            </f:facet>
+                            </f:facet>-->
                         </p:column>
 
                     </p:dataTable>
