--- a/src/main/webapp/inward/inward_search_professional_payment_due.xhtml
+++ b/src/main/webapp/inward/inward_search_professional_payment_due.xhtml
@@ -15,10 +15,10 @@
                         <f:facet name="header">
                             <h:panelGrid columns="7" >
                                 <h:outputLabel value="From Date"/>
-                                <p:calendar styleClass="dateTimePicker" id="fromDate" value="#{searchController.fromDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" >      
+                                <p:calendar styleClass="dateTimePicker" id="fromDate" value="#{searchController.fromDate}" navigator="true" pattern="dd MMMM yyyy hh mm ss a" >      
                                 </p:calendar>
                                 <h:outputLabel value="To Date"/>
-                                <p:calendar id="toDate" value="#{searchController.toDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" >                                                                              
+                                <p:calendar id="toDate" value="#{searchController.toDate}" navigator="true" pattern="dd MMMM yyyy hh mm ss a" >                                                                              
                                 </p:calendar>
                                 <p:commandButton id="btnSearch" ajax="false" value="Search" action="#{searchController.createDueFeeTableInward}" onclick="onSubmitButton();" />
                                 <p:commandButton id="btnSearchAll" ajax="false" value="Search All" action="#{searchController.createDueFeeTableInwardAll}" onclick="onSubmitButton();" />                                 
