--- a/src/main/webapp/opd_service.xhtml
+++ b/src/main/webapp/opd_service.xhtml
@@ -28,7 +28,7 @@
                                     <p:selectOneListbox converter="serv"   id="lstSelect"   value="#{serviceController.current}" style="min-width: 223px; height: 300px;">
                                         <f:selectItems  value="#{serviceController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" >
                                         </f:selectItems>
-                                        <p:ajax event="change"   update="gpDetail" process="lstSelect" >
+                                        <p:ajax event="change"   update="gpDetail btnDelete" process="lstSelect" >
                                         </p:ajax>
                                     </p:selectOneListbox>
 
@@ -40,7 +40,7 @@
                                         </f:ajax>
                                     </h:commandButton>
                                     <h:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                return false;" action="#{serviceController.delete()}"  value="Delete"  >
+                                        return false;" action="#{serviceController.delete()}"  value="Delete" disabled="#{serviceController.current.id eq 32768435}" >
                                     </h:commandButton>
 
 
