--- a/src/main/webapp/reportLab/count_by_machine_and_bill_type.xhtml
+++ b/src/main/webapp/reportLab/count_by_machine_and_bill_type.xhtml
@@ -4,7 +4,6 @@
                 template="/resources/template/template.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
-                xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
@@ -23,20 +22,24 @@
 
                         <h:panelGrid columns="2" styleClass="noPrintButton">
                             <h:outputLabel value="From Date"/>
-                            <p:calendar id="frmDate" value="#{investigationMonthSummeryOwnController.fromDate}" pattern="dd MMMM yyyy HH:mm:ss" >
+                            <p:calendar styleClass="dateTimePicker" id="frmDate" value="#{investigationMonthSummeryOwnController.fromDate}" pattern="dd MMMM yyyy HH:mm:ss" >
                             </p:calendar>
                             <h:outputLabel value="To Date"/>
-                            <p:calendar id="toDate" value="#{investigationMonthSummeryOwnController.toDate}" pattern="dd MMMM yyyy HH:mm:ss" >
+                            <p:calendar styleClass="dateTimePicker" id="toDate" value="#{investigationMonthSummeryOwnController.toDate}" pattern="dd MMMM yyyy HH:mm:ss" >
                             </p:calendar>
                             <h:outputLabel  value="Institution"  ></h:outputLabel>
                             <p:autoComplete  value="#{investigationMonthSummeryOwnController.institution}" 
                                              completeMethod="#{institutionController.completeIns}" 
-                                             var="dept" itemValue="#{dept}" itemLabel="#{dept.name}" forceSelection="true" rendered="true" requiredMessage="You must select a department" >
+                                             var="dept" itemValue="#{dept}" itemLabel="#{dept.name}" 
+                                             forceSelection="true" rendered="true" 
+                                             requiredMessage="You must select a department" >
                             </p:autoComplete>
                         </h:panelGrid>
                         <h:panelGrid columns="5" styleClass="noPrintButton">
                             <p:spacer width="70" height="1"/>
                             <p:commandButton ajax="false"  value="Refresh" action="#{investigationMonthSummeryOwnController.createLabServiceWithCountByMachineAndBillType()}"
+                                             styleClass="noPrintButton" style="float: right;" />
+                            <p:commandButton ajax="false"  value="Refresh new" action="#{investigationMonthSummeryOwnController.createLabServiceWithCountAndValueByMachineAndBillType()}"
                                              styleClass="noPrintButton" style="float: right;" />
                             <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" style="float:right;">
                                 <p:printer target="panelPrint" />
@@ -54,49 +57,120 @@
                             <h:outputLabel value="Investigation Month End Summary "/>
                             <h:outputLabel value="#{investigationMonthSummeryOwnController.institution.name}" style="white-space: pre-line"/>
                             <h:outputLabel value="From : " style="white-space: pre-line"/>
-                                <h:outputLabel value="#{investigationMonthSummeryOwnController.fromDate}">
-                                    <f:convertDateTime pattern="dd MMMM yyyy hh:mm:ss a" />
-                                </h:outputLabel>
+                            <h:outputLabel value="#{investigationMonthSummeryOwnController.fromDate}">
+                                <f:convertDateTime pattern="dd MMMM yyyy hh:mm:ss a" />
+                            </h:outputLabel>
                             <h:outputLabel value="&emsp;&emsp;To : "/>
-                                <h:outputLabel value="#{investigationMonthSummeryOwnController.toDate}">
-                                    <f:convertDateTime pattern="dd MMMM yyyy hh:mm:ss a" />
-                                </h:outputLabel>
+                            <h:outputLabel value="#{investigationMonthSummeryOwnController.toDate}">
+                                <f:convertDateTime pattern="dd MMMM yyyy hh:mm:ss a" />
+                            </h:outputLabel>
                         </f:facet>
 
                         <p:column headerText="Machine Name" >
                             <h:outputLabel value="#{c.machine.name}"  />
                         </p:column>
 
-                        <p:column headerText="OPD" style="text-align:right" >
-                            <h:outputLabel value="#{c.opdCount}" />
+                        <p:column headerText="OPD Count" style="text-align:right" >
+                            <h:outputLabel value="#{c.opdCount}" >
+                                <f:convertNumber pattern="#,##0" />
+                            </h:outputLabel>
+                            <f:facet name="footer">
+                                <h:outputLabel value="#{investigationMonthSummeryOwnController.totalOpdCount}">
+                                    <f:convertNumber pattern="#,##0" />
+                                </h:outputLabel>
+                            </f:facet>
                         </p:column>
 
-                        <p:column headerText="Iward" style="text-align:right" >
-                            <h:outputLabel value="#{c.inwardCount}" />
+                        <p:column headerText="OPD Value" style="text-align:right" >
+                            <h:outputLabel value="#{c.opdTotal}" >
+                                <f:convertNumber pattern="#,##0.00" />
+                            </h:outputLabel>
+                            <f:facet name="footer">
+                                <h:outputLabel value="#{investigationMonthSummeryOwnController.totalOpd}">
+                                    <f:convertNumber pattern="#,##0.00" />
+                                </h:outputLabel>
+                            </f:facet>
                         </p:column>
 
-                        <p:column headerText="Collecting Centre" style="text-align:right" >
-                            <h:outputLabel value="#{c.ccCount}" />
+                        <p:column headerText="Iward Count" style="text-align:right" >
+                            <h:outputLabel value="#{c.inwardCount}" >
+                                <f:convertNumber pattern="#,##0" />
+                            </h:outputLabel>
+                            <f:facet name="footer">
+                                <h:outputLabel value="#{investigationMonthSummeryOwnController.totalInwardCount}">
+                                    <f:convertNumber pattern="#,##0" />
+                                </h:outputLabel>
+                            </f:facet>
                         </p:column>
 
-                        <p:column headerText="Total" style="text-align:right" >
-                            <h:outputLabel value="#{c.count}" />
+                        <p:column headerText="Iward Value" style="text-align:right" >
+                            <h:outputLabel value="#{c.inwardTotal}" >
+                                <f:convertNumber pattern="#,##0.00" />
+                            </h:outputLabel>
+                            <f:facet name="footer">
+                                <h:outputLabel value="#{investigationMonthSummeryOwnController.totalInward}">
+                                    <f:convertNumber pattern="#,##0.00" />
+                                </h:outputLabel>
+                            </f:facet>
                         </p:column>
 
-                        <p:columnGroup type="footer">  
-                            <p:row>                              
-                                <p:column footerText="Total" colspan="4"/>
-                                <p:column footerText="#{investigationMonthSummeryOwnController.countTotal}"  style="text-align:right">
-                                    <f:facet name="footer">
-                                        <h:outputLabel value="#{investigationMonthSummeryOwnController.countTotal}">
-                                        </h:outputLabel>
-                                    </f:facet>
-                                </p:column>                             
-                            </p:row>  
-                        </p:columnGroup>
-                <f:facet name="footer" >
-                    <h:outputLabel value="Printed By : #{sessionController.loggedUser.webUserPerson.name}" style="float: right"/>
-                </f:facet>
+                        <p:column headerText="Collecting Centre Count" style="text-align:right" >
+                            <h:outputLabel value="#{c.ccCount}" >
+                                <f:convertNumber pattern="#,##0" />
+                            </h:outputLabel>
+                            <f:facet name="footer">
+                                <h:outputLabel value="#{investigationMonthSummeryOwnController.totalccCount}">
+                                    <f:convertNumber pattern="#,##0" />
+                                </h:outputLabel>
+                            </f:facet>
+                        </p:column>
+
+                        <p:column headerText="Collecting Centre Value" style="text-align:right" >
+                            <h:outputLabel value="#{c.ccTotal}" >
+                                <f:convertNumber pattern="#,##0.00" />
+                            </h:outputLabel>
+                            <f:facet name="footer">
+                                <h:outputLabel value="#{investigationMonthSummeryOwnController.totalcc}">
+                                    <f:convertNumber pattern="#,##0.00" />
+                                </h:outputLabel>
+                            </f:facet>
+                        </p:column>
+
+                        <p:column headerText="Total Count" style="text-align:right" >
+                            <h:outputLabel value="#{c.opdCount+c.inwardCount+c.ccCount}" >
+                                <f:convertNumber pattern="#,##0" />
+                            </h:outputLabel>
+                            <f:facet name="footer">
+                                <h:outputLabel value="#{investigationMonthSummeryOwnController.totalCount}">
+                                    <f:convertNumber pattern="#,##0" />
+                                </h:outputLabel>
+                            </f:facet>
+                        </p:column>
+                        <p:column headerText="Total Value" style="text-align:right" >
+                            <h:outputLabel value="#{c.opdTotal+c.inwardTotal+c.ccTotal}" >
+                                <f:convertNumber pattern="#,##0.00" />
+                            </h:outputLabel>
+                            <f:facet name="footer">
+                                <h:outputLabel value="#{investigationMonthSummeryOwnController.total}">
+                                    <f:convertNumber pattern="#,##0.00" />
+                                </h:outputLabel>
+                            </f:facet>
+                        </p:column>
+
+                        <!--                        <p:columnGroup type="footer">  
+                                                    <p:row>                              
+                                                        <p:column footerText="Total" colspan="1"/>
+                                                        <p:column footerText="#{investigationMonthSummeryOwnController.countTotal}"  style="text-align:right">
+                                                            <f:facet name="footer">
+                                                                <h:outputLabel value="#{investigationMonthSummeryOwnController.countTotal}">
+                                                                </h:outputLabel>
+                                                            </f:facet>
+                                                        </p:column>                             
+                                                    </p:row>  
+                                                </p:columnGroup>-->
+                        <f:facet name="footer" >
+                            <h:outputLabel value="Printed By : #{sessionController.loggedUser.webUserPerson.name}" style="float: right"/>
+                        </f:facet>
                     </p:dataTable>
 
 
